# Astragaloi

./: .gitignore  Cargo.toml  README.md
main/: .gitignore  Cargo.toml  board.py  ki.py  main.py  punkte.py  spieler.py  würfel.py
main/src/: dice.spec  main.rs
test/: .gitignore  Cargo.toml
